docs: 移除 CompletableFuture 审查报告中的结构化并发评估章节